# mtuci-rs

./: Cargo.toml
GTD_todo_app/: Cargo.toml
app_modifier/: Cargo.toml
app_modifier/src/: lib.rs  main.rs
chapter_0/: Cargo.toml
chapter_0/src/: main.rs  try.rs
chapter_10_1_generic_data_types/: Cargo.toml
chapter_10_1_generic_data_types/src/: main.rs
chapter_11_2_control_of_how_tests_are_run/src/: main.rs
chapter_12_3_refactoring_for_modularity_and_errors/: Cargo.toml
chapter_12_4_developing_lib_functionality/src/: lib.rs  main.rs
chapter_12_6_writing_error_msgs/src/: lib.rs
chapter_13_1_closures/: Cargo.toml
chapter_13_1_closures/src/: main.rs
chapter_13_2_processing_with_iterators/: Cargo.toml
chapter_13_2_processing_with_iterators/src/: main.rs
chapter_13_3_improving_io_project/ch12_project/: project.rs
chapter_13_4_loops_vs_iters/: Cargo.toml
chapter_13_4_loops_vs_iters/src/: main.rs
chapter_15_1_using_box_t/src/: main.rs
chapter_15_2_sp_like_references/src/: main.rs
chapter_15_3_runing_code_on_cleanup/src/: main.rs
chapter_15_4_Rc_T/: Cargo.toml
chapter_15_4_Rc_T/src/: main.rs
chapter_15_6_reference_cycles/: Cargo.toml
chapter_1_1_hello_world/: Cargo.toml
chapter_1_2_hello_cargo/: Cargo.toml
chapter_2/src/: main.rs
chapter_2_1_guessing_game/: Cargo.toml
chapter_2_1_guessing_game/src/: main.rs
chapter_3_1_variables/: Cargo.toml
chapter_3_1_variables/src/: main.rs
chapter_3_2_datatypes/src/: main.rs
chapter_3_3_functions/: Cargo.toml
chapter_3_3_functions/src/: main.rs
chapter_3_5_control_flow/: Cargo.toml
chapter_3_5_control_flow/src/: main.rs
chapter_3_6_additional_task/: Cargo.toml
chapter_3_6_additional_task/src/: main.rs
chapter_4_1_ownership/src/: main.rs
chapter_4_2_links/src/: main.rs
chapter_4_3_slices/: Cargo.toml
chapter_4_3_slices/src/: main.rs
chapter_5_1_struct_creation/: Cargo.toml
chapter_5_1_struct_creation/src/: main.rs
chapter_5_2_struct_example/src/: main.rs
chapter_5_3_method_syntax/: Cargo.toml
chapter_5_3_method_syntax/src/: main.rs
chapter_6_1_enum/: Cargo.toml
chapter_6_1_enum/src/: main.rs
chapter_6_2_match/src/: main.rs
chapter_6_3_if_let/src/: main.rs
chapter_7_1_package_and_crate/: Cargo.toml
chapter_7_1_package_and_crate/src/: main.rs
chapter_7_2_defining_modules/: Cargo.toml
chapter_7_2_defining_modules/src/: main.rs
chapter_7_3_paths_module_tree/src/: main.rs
chapter_7_4_paths_keyword/: Cargo.toml
chapter_7_4_paths_keyword/src/: main.rs
chapter_7_5_separating_modules/src/: lib.rs  main.rs
chapter_7_5_separating_modules/src/front_of_house/: hostings.rs
chapter_8_1_vectors/src/: main.rs
chapter_8_2_strings/: Cargo.toml
chapter_8_2_strings/src/: main.rs
chapter_8_3_hashmap/: Cargo.toml
chapter_8_3_hashmap/src/: main.rs
chapter_8_4_additional_task_1/: Cargo.toml
chapter_8_4_additional_task_1/src/: main.rs  main_macrosses.rs  vec_functions.rs
chapter_8_5_additional_task_2/: Cargo.toml
chapter_8_5_additional_task_2/src/: main.rs
chapter_8_6_additional_task_3/: Cargo.toml
chapter_8_6_additional_task_3/src/: main.rs
chapter_9_1_panic_unrecoverable/: Cargo.toml
chapter_9_1_panic_unrecoverable/src/: main.rs
chapter_9_3_panic_or_not/: Cargo.toml
chapter_9_3_panic_or_not/src/: main.rs
fizzbuzz/src/: main.rs
homework_2/src/: task1.rs  task2.rs
homework_4/src/: main.rs
homeworks/homework_2/: Cargo.toml
homeworks/homework_2/src/: task1_2.rs
lection_3/: Cargo.toml
lection_3/src/: lib.rs  main.rs
lection_3/src/point/: mod.rs  point2d.rs  point3d.rs
lection_4/src/: main.rs
lection_5/src/: main.rs
lection_6/: Cargo.toml
lection_6/src/: main.rs
lection_6_2/: Cargo.toml
lection_6_2/src/: main.rs
lections/lection_3/src/: main.rs
lections/lection_4/: Cargo.toml
lections/lection_4/src/: main.rs
lections/lection_5/: Cargo.toml
lections/lection_6_2/src/: main.rs
project/gtd_todo_app/: .env  Cargo.toml
rustbook_chapters/chapter_0/: Cargo.toml
rustbook_chapters/chapter_10_2_traits/: Cargo.toml
rustbook_chapters/chapter_10_3_lifetimes/: Cargo.toml
rustbook_chapters/chapter_11_1_how_to_test/: Cargo.toml
rustbook_chapters/chapter_11_2_control_of_how_tests_are_run/: Cargo.toml
rustbook_chapters/chapter_11_3_test_organization/: Cargo.toml
rustbook_chapters/chapter_11_3_test_organization/src/: main.rs
rustbook_chapters/chapter_12_1_accepting_cmd_line/: Cargo.toml
rustbook_chapters/chapter_12_2_reading_file/: Cargo.toml
rustbook_chapters/chapter_12_4_developing_lib_functionality/: Cargo.toml
rustbook_chapters/chapter_12_5_working_with_variables/: Cargo.toml
rustbook_chapters/chapter_13_3_improving_io_project/: Cargo.toml
rustbook_chapters/chapter_15_1_using_box_t/: Cargo.toml
rustbook_chapters/chapter_15_2_sp_like_references/: Cargo.toml
rustbook_chapters/chapter_15_3_runing_code_on_cleanup/: Cargo.toml
rustbook_chapters/chapter_15_5_RefCell_T/: Cargo.toml
rustbook_chapters/chapter_3_2_datatypes/: Cargo.toml
rustbook_chapters/chapter_4_1_ownership/: Cargo.toml
rustbook_chapters/chapter_4_2_links/: Cargo.toml
rustbook_chapters/chapter_5_2_struct_example/: Cargo.toml
rustbook_chapters/chapter_6_2_match/: Cargo.toml
rustbook_chapters/chapter_6_3_if_let/: Cargo.toml
rustbook_chapters/chapter_7_3_paths_module_tree/: Cargo.toml
rustbook_chapters/chapter_7_5_separating_modules/: Cargo.toml
rustbook_chapters/chapter_8_1_vectors/: Cargo.toml
rustbook_chapters/chapter_9_2_recoverable/: Cargo.toml
tokio_async_in_depth/: Cargo.toml
tokio_async_in_depth/src/: main.rs
tokio_channels/: Cargo.toml
tokio_channels/src/: main.rs
tokio_chapters/tokio_hello_tokio/: Cargo.toml
tokio_chapters/tokio_io/: Cargo.toml
tokio_chapters/tokio_shared_state/: Cargo.toml
tokio_chapters/tokio_spawning/: Cargo.toml
tokio_chapters/tokio_streams/: Cargo.toml
tokio_framing/: Cargo.toml
tokio_framing/src/: main.rs
tokio_io/src/: main.rs
tokio_select/: Cargo.toml
tokio_spawning/src/: main.rs
tokio_streams/: Cargo.toml
tokio_streams/src/: main.rs
(+52 files in other folders)
