[workspace]
members = [
    "chapter_0",
    "chapter_1_1_hello_world",
    "chapter_1_2_hello_cargo",
    "chapter_2_1_guessing_game",
    "chapter_3_1_variables",
    "chapter_3_2_datatypes",
    "chapter_3_3_functions",
    "chapter_3_5_control_flow",
    "chapter_3_6_additional_task",
    "chapter_4_1_ownership",
    "chapter_4_2_links",
    "chapter_4_3_slices",
    "chapter_5_1_struct_creation",
    "chapter_5_2_struct_example",
    "chapter_5_3_method_syntax",
    "chapter_6_1_enum",
    "chapter_6_2_match",
    "chapter_6_3_if_let",
    "chapter_7_1_package_and_crate",
    "chapter_7_2_defining_modules",
    "chapter_7_3_paths_module_tree",
    "chapter_7_4_paths_keyword",
    "chapter_7_5_separating_modules",
    "chapter_8_1_vectors",
    "chapter_8_2_strings",
    "chapter_8_3_hashmap",
    "chapter_8_4_additional_task_1",
    "chapter_8_5_additional_task_2",
    "chapter_8_6_additional_task_3",
    "homework_2",
    "fizzbuzz",
    "lection_3",
]




