[workspace]
members = [
    "chapter_0",
    "chapter_1_1_hello_world",
    "chapter_1_2_hello_cargo",
    "chapter_2_1_guessing_game",
    "chapter_3_1_variables",
    "chapter_3_2_datatypes",
    "chapter_3_3_functions",
    "chapter_3_5_control_flow",
    "chapter_3_6_additional_task",
    "chapter_4_1_ownership",
    "chapter_4_2_links",
    "chapter_4_3_slices",
    "chapter_5_1_struct_creation",
    "chapter_5_2_struct_example",
    "chapter_5_3_method_syntax",
    "chapter_6_1_enum",
    "chapter_6_2_match",
    "chapter_6_3_if_let",
    "chapter_7_1_package_and_crate",
    "chapter_7_2_defining_modules",
    "chapter_7_3_paths_module_tree",
    "chapter_7_4_paths_keyword",
    "chapter_7_5_separating_modules",
    "chapter_8_1_vectors",
    "chapter_8_2_strings",
    "chapter_8_3_hashmap",
    "chapter_8_4_additional_task_1",
    "chapter_8_5_additional_task_2",
    "chapter_8_6_additional_task_3",
    "chapter_9_1_panic_unrecoverable",
    "chapter_9_2_recoverable",
    "chapter_9_3_panic_or_not",
    "chapter_10_1_generic_data_types",
    "chapter_10_2_traits",
    "chapter_10_3_lifetimes",
    "chapter_11_1_how_to_test",
    "chapter_11_2_control_of_how_tests_are_run",
    "chapter_11_3_test_organization",
    "chapter_12_1_accepting_cmd_line",
    "chapter_12_2_reading_file",
    "chapter_12_3_refactoring_for_modularity_and_errors",
    "chapter_12_4_developing_lib_functionality",
    "chapter_12_5_working_with_variables",
    "chapter_12_6_writing_error_msgs",
    "chapter_13_1_closures",
    "chapter_13_2_processing_with_iterators",
    "chapter_13_3_improving_io_project",
    "chapter_13_4_loops_vs_iters",
    "chapter_15_1_using_box_t",
    "chapter_15_2_sp_like_references",
    "chapter_15_3_runing_code_on_cleanup",
    "chapter_15_4_Rc_T",
    "chapter_15_5_RefCell_T",
    "chapter_15_6_reference_cycles",

    "fizzbuzz",
    "homework_2",
    "homework_4",

    "tokio_hello_tokio",
    "tokio_spawning",
    "tokio_shared_state",
    "tokio_channels",
    "tokio_io",
    "tokio_framing",
    "tokio_async_in_depth",
    "tokio_select",
    "tokio_streams",

    "lection_3",
    "lection_4",
    "lection_5",
    "lection_6",
    "lection_6_2",

    "GTD_todo_app",

    "app_modifier"
]
