[workspace]
members = [
    "rustbook_chapters/chapter_0",
    "rustbook_chapters/chapter_1_1_hello_world",
    "rustbook_chapters/chapter_1_2_hello_cargo",
    "rustbook_chapters/chapter_2_1_guessing_game",
    "rustbook_chapters/chapter_3_1_variables",
    "rustbook_chapters/chapter_3_2_datatypes",
    "rustbook_chapters/chapter_3_3_functions",
    "rustbook_chapters/chapter_3_5_control_flow",
    "rustbook_chapters/chapter_3_6_additional_task",
    "rustbook_chapters/chapter_4_1_ownership",
    "rustbook_chapters/chapter_4_2_links",
    "rustbook_chapters/chapter_4_3_slices",
    "rustbook_chapters/chapter_5_1_struct_creation",
    "rustbook_chapters/chapter_5_2_struct_example",
    "rustbook_chapters/chapter_5_3_method_syntax",
    "rustbook_chapters/chapter_6_1_enum",
    "rustbook_chapters/chapter_6_2_match",
    "rustbook_chapters/chapter_6_3_if_let",
    "rustbook_chapters/chapter_7_1_package_and_crate",
    "rustbook_chapters/chapter_7_2_defining_modules",
    "rustbook_chapters/chapter_7_3_paths_module_tree",
    "rustbook_chapters/chapter_7_4_paths_keyword",
    "rustbook_chapters/chapter_7_5_separating_modules",
    "rustbook_chapters/chapter_8_1_vectors",
    "rustbook_chapters/chapter_8_2_strings",
    "rustbook_chapters/chapter_8_3_hashmap",
    "rustbook_chapters/chapter_9_1_panic_unrecoverable",
    "rustbook_chapters/chapter_9_2_recoverable",
    "rustbook_chapters/chapter_9_3_panic_or_not",
    "rustbook_chapters/chapter_10_1_generic_data_types",
    "rustbook_chapters/chapter_10_2_traits",
    "rustbook_chapters/chapter_10_3_lifetimes",
    "rustbook_chapters/chapter_11_1_how_to_test",
    "rustbook_chapters/chapter_11_2_control_of_how_tests_are_run",
    "rustbook_chapters/chapter_11_3_test_organization",
    "rustbook_chapters/chapter_12_1_accepting_cmd_line",
    "rustbook_chapters/chapter_12_2_reading_file",
    "rustbook_chapters/chapter_12_3_refactoring_for_modularity_and_errors",
    "rustbook_chapters/chapter_12_4_developing_lib_functionality",
    "rustbook_chapters/chapter_12_5_working_with_variables",
    "rustbook_chapters/chapter_12_6_writing_error_msgs",
    "rustbook_chapters/chapter_13_1_closures",
    "rustbook_chapters/chapter_13_2_processing_with_iterators",
    "rustbook_chapters/chapter_13_3_improving_io_project",
    "rustbook_chapters/chapter_13_4_loops_vs_iters",
    "rustbook_chapters/chapter_15_1_using_box_t",
    "rustbook_chapters/chapter_15_2_sp_like_references",
    "rustbook_chapters/chapter_15_3_runing_code_on_cleanup",
    "rustbook_chapters/chapter_15_4_Rc_T",
    "rustbook_chapters/chapter_15_5_RefCell_T",
    "rustbook_chapters/chapter_15_6_reference_cycles",

    "homeworks/fizzbuzz",
    "homeworks/homework_2",
    "homeworks/homework_4",

    "tokio_chapters/tokio_hello_tokio",
    "tokio_chapters/tokio_spawning",
    "tokio_chapters/tokio_shared_state",
    "tokio_chapters/tokio_channels",
    "tokio_chapters/tokio_io",
    "tokio_chapters/tokio_framing",
    "tokio_chapters/tokio_async_in_depth",
    "tokio_chapters/tokio_select",
    "tokio_chapters/tokio_streams",

    "lections/lection_3",
    "lections/lection_4",
    "lections/lection_5",
    "lections/lection_6",
    "lections/lection_6_2",

    "project/gtd_todo_app"
]
