[package]
name = "chapter_11_3_test_organization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chapter_11_2_control_of_how_tests_are_run = { path = "../chapter_11_2_control_of_how_tests_are_run" }